--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap");
+
+body {
+  overscroll-behavior: none;
+}
+
 .App {
+  font-family: "Oswald", sans-serif;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  left: 0;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  transition: all .1s;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  text-transform: capitalize;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.def {
+  width: 400px;
+  margin: 10px auto 0 auto;
+  padding: 20px;
+  /* box-shadow: 0 0 15px 0 rgb(0, 0, 0, 0.1); */
+  text-align: left;
+  background-color: rgb(50, 60, 80);
+  color: rgb(255, 255, 245);
+  background-color: rgb(240, 240, 250);
+  transition: all .1s;
+  color: black;
+  border-radius: 10px;
+}
+
+.results {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 800px;
+  margin: 20px auto;
+  /* border: 2px solid red; */
+  height: 330px;
+  overflow-Y: scroll;
+  overflow-X:hidden ;
 }
