--- a/src/components/Buttons/style.css
+++ b/src/components/Buttons/style.css
@@ -19,7 +19,8 @@
   }
   
   .buttons > button:active {
-    top: 2px;
+    top: 1px;
+    transform: scale(.99);
   }
   
   button > span {
@@ -32,7 +33,7 @@
     left: 0;
     top: 0;
     height: 100%;
-    width: 8px;
+    width: 0px;
     background-color: rgb(0, 0, 0, 0.2);
     transition: width 0.2s;
   }
