--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -23,18 +23,18 @@ header {
     width: 18px;
     background-color: teal;
     border-radius: 100px;
-    transition: all .5s;
-    box-shadow: inset -3px 0 3px 1px rgb(0,0,0,.3);
+    transition: all .2s;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
-  .radiance {
-    position: absolute;
-    left: 3px;
-    top: 4px;
-    height: 5px;
-    width: 5px;
-    border-radius: 10px;
-    background-color: rgb(255,255,255,.2);
-    outline: 2px solid rgb(255,255,255,.1)
+  .ripple {
+    background-color: teal;
+    opacity: .5;
+    height: 10px;
+    width: 10px;
+    border-radius: 100px;
+    /* transition: opacity .5s, transform .7s; */
   }
