--- a/src/components/Buttons/style.css
+++ b/src/components/Buttons/style.css
@@ -3,7 +3,7 @@
   }
   
   .buttons > button {
-    font-family: "Oswald", sans-serif;
+    font-family: sans-serif;
     padding: 10px 30px;
     margin: 10px;
     background-color: rgb(255, 0, 90);
@@ -17,6 +17,11 @@
     border-radius: 4px;
     overflow: hidden;
   }
+
+  .buttons > button:focus{
+    outline: 2px solid blue;
+    outline-offset: 2px;
+  }
   
   .buttons > button:active {
     top: 1px;
@@ -28,7 +33,7 @@
     position: relative;
   }
   
-  .hover {
+  .hover-element {
     position: absolute;
     left: 0;
     top: 0;
@@ -37,6 +42,11 @@
     background-color: rgb(0, 0, 0, 0.2);
     transition: width 0.2s;
   }
+
+  .expanded {
+    width: 100%
+  }
+
   
   .buttons > button:last-of-type {
     background-color: rgb(180, 70, 255);
