--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -5,7 +5,13 @@ header {
     padding: 0 50px;
 }
 
+h1 {
+  font-family: "Oswald", sans-serif;
+}
+
 .theme {
+    all: initial;
+    position: relative;
     font-size: 3rem;
     height: 10px;
     width: 40px;
@@ -17,17 +23,27 @@ header {
     justify-content: flex-start;
     cursor: pointer;
   }
+
+  .theme:focus .toggle {
+    height: 22px;
+    width: 22px;
+  }
   
   .toggle {
-    height: 18px;
-    width: 18px;
+    height: 16px;
+    width: 16px;
     background-color: teal;
     border-radius: 100px;
     transition: all .2s;
-    position: relative;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .flipped {
+    margin-left: 100%;
+    translate: -100%;
   }
 
   .ripple {
@@ -36,5 +52,4 @@ header {
     height: 10px;
     width: 10px;
     border-radius: 100px;
-    /* transition: opacity .5s, transform .7s; */
   }
