--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@500;300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
 body {
   overscroll-behavior: none;
 }
 
 .App {
-  font-family: "Oswald", sans-serif;
-  font-weight: 500;
+  font-family: sans-serif;
   text-align: center;
   position: absolute;
+  font-weight: 500;
   top: 0;
   width: 100%;
   left: 0;
@@ -22,27 +22,7 @@ h2 {
   font-weight: 500;
 }
 
-.def {
-  width: 400px;
-  margin: 10px auto 0 auto;
-  padding: 20px;
-  /* box-shadow: 0 0 15px 0 rgb(0, 0, 0, 0.1); */
-  text-align: left;
-  background-color: rgb(50, 60, 80);
-  color: rgb(255, 255, 245);
-  background-color: rgb(240, 240, 250);
-  transition: all .1s;
-  color: black;
-  border-radius: 10px;
-}
-
-.results {
-  display: grid;
-  grid-template-columns: 1fr;
-  width: 800px;
-  margin: 20px auto;
-  /* border: 2px solid red; */
-  height: 330px;
-  overflow-Y: scroll;
-  overflow-X:hidden ;
+.dark {
+  background-color: rgb(30,30,40);
+  color:white;
 }
